# templates

./: Cargo.toml  README.md  cargo-generate.toml
contracts/{{adapter_name}}/: Cargo.toml
contracts/{{app_name}}/: Cargo.toml
contracts/{{app_name}}/src/: contract.rs
contracts/{{app_name}}/tests/: interchain_integration.rs
contracts/{{ibc_app_name}}/: Cargo.toml  metadata.json
contracts/{{ibc_app_name}}/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/{{ibc_app_name}}/src/handlers/: execute.rs  instantiate.rs  query.rs
contracts/{{ibc_app_name}}/src/ibc/: callback.rs  module.rs
contracts/{{ibc_app_name}}/tests/: ping_pong_tests.rs
contracts/{{standalone_name}}/: Cargo.toml
contracts/{{standalone_name}}/src/: interface.rs
frontend/: README.md  abstract.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/_components/: codegen-contract.tsx
scripts/: schema.sh
