[workspace]
members = ["contracts/*"]
resolver = "2"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[workspace.dependencies]
cosmwasm-std = { version = "2.1.4" }
cosmwasm-schema = { version = "2.1.4" }
cw-controllers = { version = "2.0.0" }
cw-storage-plus = "2.0.0"
thiserror = { version = "1.0.64" }
schemars = "0.8"
cw-asset = { version = "4.0.0" }

abstract-app = { version = "0.24.1" }
abstract-adapter = { version = "0.24.1" }
abstract-standalone = { version = "0.24.1" }
abstract-interface = { version = "0.24.1" }
abstract-client = { version = "0.24.1" }
cw-orch = { version = "0.27.0" }
{% if with_ibc %}
cw-orch-interchain = { version = "0.8.0" }
{% endif %}

lazy_static = "1.4.0"
const_format = "0.2.33"
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
clap = { version = "4.5.19" }
{% if include_app %}
{{app_name | kebab_case}} = { path = "contracts/{{app_name}}" }
{% endif %}
{% if include_adapter %}
{{adapter_name | kebab_case}} = { path = "contracts/{{adapter_name}}" }
{% endif %}
{% if include_standalone %}
{{standalone_name | kebab_case}} = { path = "contracts/{{standalone_name}}" }
{% endif %}
