[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"

[features]
default = ["export"]
export = []
daemon-bin = [
    "cw-orch/daemon",
    "dep:clap",
    "dep:abstract-client",
    "dep:dotenv",
    "dep:env_logger",
]
schema = ["abstract-app/schema"]

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
cw-asset = { workspace = true }
abstract-app = { workspace = true }
abstract-ibc-client = { version = "0.24.1", default-features = false }
const_format = { workspace = true }

# Dependencies for interface
cw-orch = { workspace = true }
abstract-interface = { workspace = true }

# Dependencies for bins
clap = { workspace = true, optional = true, features = ["derive"] }
abstract-client = { workspace = true, features = [
    "interchain",
], optional = true }
dotenv = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }

[dev-dependencies]
cw-orch-interchain = { workspace = true, features = ["daemon"] }
cw-orch = { workspace = true, features = ["daemon"] }
abstract-client = { workspace = true, features = ["interchain"] }
env_logger = "0.11"
